fixing country tooltip z-index

--- a/app/assets/stylesheets/globe.css
+++ b/app/assets/stylesheets/globe.css
@@ -62,6 +62,7 @@
   background: #fff;
   color: #666;
   pointer-events: none;
+  z-index: 99;
 }
 button.rotate-button {
   position: absolute;
